# trame-streamlit

./: .gitignore  README.md  pyproject.toml  requirements.txt
example/: bidirectional.py  requirements.txt  streamlit-app.py  streamlit_to_trame.py  trame_to_streamlit.py
example/trame-app/: app.py
streamlit/: streamlit-app.py
streamlit/trame_app_component/: __init__.py  index.html
trame-app/: app.py
trame_streamlit/: __init__.py
trame_streamlit/trame_app_iframe_wrapper/: .gitignore  __init__.py
trame_streamlit/trame_app_iframe_wrapper/frontend/: package-lock.json  package.json
trame_streamlit/trame_app_iframe_wrapper/frontend/public/: index.html
trame_streamlit/trame_app_iframe_wrapper/frontend/src/: TrameAppIframeWrapper.tsx  index.tsx
